objects/Portefeuille_contacts__c.object
<CustomObject>
    <description>Liste les utilisateurs internes en lien avec un contact via : la création du contact, une opportunité créée sur le contact, ou une activité créée sur le contact.</description>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Relations avec le contact</relationshipLabel>
        <relationshipName>Portefeuilles_contacts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TECH_External_Id__c</fullName>
        <description>Champ technique qui contient la copie de l&apos;Id de l&apos;enregistrement 
en production</description>
        <externalId>true</externalId>
        <label>TECH_External_Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECH_Unicity_Value_del__c</fullName>
        <externalId>true</externalId>
        <label>TECH Unicity Value</label>
        <length>37</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Portefeuilles_contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Relation avec le contact</label>
    <nameField>
        <displayFormat>PC-{0000000000}</displayFormat>
        <label>Relation avec le contact</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relations avec le contact</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>